# research-hackage

./: .ghci  LICENSE  cabal.project  chart-hackage.cabal  hie.yaml  readme.org  research-hackage.cabal
.github/workflows/: Haskell-CI.yml
app/: app.hs
src/: Lib.hi  Lib.hs
src/Research/: Hackage.hs
