cabal-version: 2.4
name:          chart-hackage
version:       0.0.1
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/chart-hackage#readme
bug-reports: https://github.com/tonyday567/chart-hackage/issues
build-type: Simple
tested-with: GHC == 8.10.4
source-repository head
  type: git
  location: https://github.com/tonyday567/chart-hackage

common common-options
  build-depends:
    base >=4.7 && <5
  default-language:
    Haskell2010

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie

library
  import: common-options
  import: ghc-options-stanza
  hs-source-dirs:
    src
  default-extensions:
  build-depends:
    base,
    chart-svg ^>= 0.3,
    streamly ^>= 0.8,
    streamly-archive ^>= 0.1,
    bytestring ^>= 0.10.12,
    bifunctors,
    cryptonite,
    containers,
    flatparse,
    Cabal,
    fgl,
  exposed-modules:
    Lib

executable chart-hackage
  import: common-options
  import: ghc-options-stanza
  main-is: app.hs
  hs-source-dirs: app
  build-depends:
    chart-hackage,
