cabal-version: 2.4
name:          research-hackage
version:       0.0.1
synopsis: See readme.org
description: See readme.org for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) 2022
license: BSD-3-Clause
homepage: https://github.com/tonyday567/research-hackage#readme
bug-reports: https://github.com/tonyday567/research-hackage/issues
build-type: Simple
tested-with: GHC == 8.10.7
source-repository head
  type: git
  location: https://github.com/tonyday567/research-hackage

common common-options
  build-depends:
    base >=4.7 && <5
  default-language:
    Haskell2010

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie

library
  import: common-options
  import: ghc-options-stanza
  hs-source-dirs:
    src
  default-extensions:
  build-depends:
    base,
    chart-svg ^>= 0.3,
    streamly ^>= 0.8,
    streamly-archive ^>= 0.1,
    bytestring ^>= 0.11.3,
    directory,
    bifunctors,
    cryptonite,
    containers,
    flatparse,
    Cabal,
    fgl,
    dotparse,
    algebraic-graphs,
    optics-core,
  exposed-modules:
    Research.Hackage
